--- a/profile/public/style/index.css
+++ b/profile/public/style/index.css
@@ -59,6 +59,19 @@ strong{
     flex-direction: row;
     padding: 2px;
 }
+
+
+img{
+    
+    border: 3px solid hsl(210deg 10% 90%);
+    border-radius: 80px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 150px;
+}
+
 @media only screen and (max-width: 800px) {
     .contact{
         display: flex;
