--- a/profile/public/style/index.css
+++ b/profile/public/style/index.css
@@ -25,19 +25,25 @@ nav{
     font-size: x-large;
 }
 
-a{
+a {
     text-decoration: none;
     color: hsl(210deg 10% 90%);
 }
 
-a:hover{
+a:hover i{
     text-decoration: none;
     color: hsl(210deg 40% 16%);
     background-color: hsl(210deg 10% 90%);
     border: 2px solid hsl(210deg 10% 90%);
     border-radius: 3px;
 }
-
+a:hover {
+    text-decoration: none;
+    color: hsl(210deg 40% 16%);
+    background-color: hsl(210deg 10% 90%);
+    border: 2px solid hsl(210deg 10% 90%);
+    border-radius: 3px;
+}
 
 .skill{
     display: flex;
